--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,7 +12,9 @@
         android:layout_margin="@dimen/_10sdp"
         android:divider="@android:color/transparent"
         android:dividerHeight="0.0px"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -40,29 +42,89 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_10sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/ivBookType"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_margin="@dimen/_8sdp"
+                app:layout_constraintStart_toEndOf="@id/v1"
+                app:layout_constraintTop_toBottomOf="@id/tvBookTitle"
+                tools:src="@drawable/ic_pdf" />
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivDownload"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_margin="@dimen/_20sdp"
+                app:layout_constraintBottom_toBottomOf="@id/consProgressDownload"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_arrow"
+                tools:src="@drawable/ic_download"
                 tools:ignore="VectorDrawableCompat" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvBookType"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_5sdp"
+
+                android:layout_margin="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_15sdp"
                 android:ellipsize="end"
                 android:lines="1"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/consProgressDownload"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/v1"
-                app:layout_constraintTop_toBottomOf="@id/tvBookTitle"
+                app:layout_constraintTop_toBottomOf="@id/ivBookType"
                 tools:text="Video" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/consProgressDownload"
+                android:layout_width="0dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/v1"
+                app:layout_constraintTop_toBottomOf="@id/tvBookType">
+
+                <androidx.appcompat.widget.AppCompatSeekBar
+                    android:id="@+id/pbDownload"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:max="100"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:progressDrawable="@drawable/bg_download_progress_bar"
+                    android:splitTrack="false"
+                    android:thumb="@drawable/bg_download_thumb_drawable"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:progress="100"
+                    tools:visibility="visible" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvDownload"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="@id/pbDownload"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/pbDownload"
+                    tools:text="70 %" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -70,4 +132,4 @@
     </androidx.cardview.widget.CardView>
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
